# regex-issue

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: CI.yml
